# magnum

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  Makefile  README.md
src/: d_string.c  file.c  file.h  json.c  json.h  libMagnum.h  magnum.c  main.c  parson.c  parson.h  spec_comments.c  spec_delimiters.c  spec_interpolation.c  spec_inverted.c  spec_magnum.c  spec_partials.c  spec_sections.c
templates/: README.md.in  archive.sh.in  main.c.in
test/: build-spec-tests.sh  combined.mustache  comments.json  delimiters.json  interpolation.json  inverted.json  magnum.json  make-spec-tests.mustache  partial.json  partial.mustache  partials.json  sections.json  test.mustache  test1.mustache
test/partials/: include1  include2  node1  test.mustache  user.mustache
